# loophole

./: .gitignore  README.md  build_web.py  main.py  pyproject.toml  run.bat
src/loophole/: __init__.py  api.py  main.py  transcriber.py
src/loophole/static/: index.html  package.json  style.css  tsconfig.json
src/loophole/static/src/: app.ts
src/loophole/static/types/: pywebview.d.ts
